almost done, 2 bugs left add shadow when overlapping with a s3lect tweet fix text going outside of box

--- a/public/styles/tweet-article.css
+++ b/public/styles/tweet-article.css
@@ -67,3 +67,18 @@
   font-weight: 800;
   text-decoration: underline;
 }
+
+#ErrorMsgBox {
+  width: 82%;
+  margin: auto;
+  margin-top: 8px;
+  text-align: center;
+  border: 4px solid #6da1a3;
+  color: red;
+  font-weight: 600;
+}
+
+
+.notVisible {
+  display: none;
+}
